refactor: split main.xml

--- a/app/assets/views/main.xml
+++ b/app/assets/views/main.xml
@@ -5,272 +5,11 @@
   <resource type="text/css" src="assets/stylesheets/themes/green.css"/>
   <ui>
     <w id="main-window" class="window theme-green">
-      <w id="main-sidebar" class="sidebar sidebar-mini">
-        <w class="sidebar-header">
-          <w type="sidebar-toggle">
-            <w type="icon" name="menu"></w>
-          </w>
-          <w type="textview" class="text sidebar-title">LC's Finder</w>
-        </w>
-        <w id="sidebar-btn-search" class="sidebar-item">
-          <w type="icon" name="magnify"></w>
-          <w type="textview-i18n" class="text" data-i18n-key="search.title">搜索</w>
-        </w>
-        <w id="sidebar-btn-home" class="sidebar-item active">
-          <w type="icon" name="image-multiple"></w>
-          <w type="textview-i18n" class="text" data-i18n-key="home.title">集锦</w>
-        </w>
-        <w id="sidebar-btn-folders" class="sidebar-item">
-          <w type="icon" name="folder-multiple-outline"></w>
-          <w type="textview-i18n" class="text" data-i18n-key="folders.title">文件夹</w>
-        </w>
-        <w id="sidebar-btn-settings" class="sidebar-item">
-          <w type="icon" name="settings"></w>
-          <w type="textview-i18n" class="text" data-i18n-key="settings.title">设置</w>
-        </w>
-      </w>
-      <w id="view-home" class="view">
-        <w class="view-navbar">
-          <w type="textview-i18n" class="text view-navbar-title on-normal-mode" data-i18n-key="home.title">集锦</w>
-          <w id="view-home-selection-stats" type="textview-i18n" class="view-navbar-text on-selection-mode"></w>
-          <w class="view-navbar-actions on-selection-mode">
-            <w id="btn-tag-home-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="tag-multiple"></w>
-            </w>
-            <w id="btn-delete-home-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="delete"></w>
-            </w>
-            <w class="divider"></w>
-            <w id="btn-cancel-home-select" class="view-navbar-btn">
-              <w type="textview-i18n" class="text" data-i18n-key="button.cancel">取消</w>
-            </w>
-          </w>
-          <w class="view-navbar-actions on-normal-mode">
-            <w id="btn-select-home-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="checkbox-multiple-marked-outline"></w>
-            </w>
-            <w id="btn-sync-home-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="sync"></w>
-            </w>
-          </w>
-        </w>
-        <w class="view-body">
-          <w id="view-home-content-wrapper" class="view-content-wrapper">
-            <w id="view-home-progress" class="top-fixed" type="progress"></w>
-            <w id="view-home-content" class="view-content full-height">
-              <w id="tip-empty-collection" class="floating center middle aligned icon message hide">
-                <w type="textview" class="icon icon icon-image-multiple"></w>
-                <w type="textview-i18n" class="text" data-i18n-key="home.message.empty">未找到可读取的图片。</w>
-              </w>
-              <w type="thumbview" id="home-collection-list" class="scrolllayer file-list"></w>
-            </w>
-            <w type="scrollbar" target="home-collection-list"/>
-            <w id="view-time-range" class="view-time-range">
-              <w id="view-time-range-content" class="view-content full-height">
-                <w id="time-range-list" class="scrolllayer time-range-list"></w>
-              </w>
-              <w type="scrollbar" target="time-range-list"/>
-            </w>
-          </w>
-        </w>
-      </w>
-      <w id="view-search" class="view hide">
-        <w class="view-navbar on-normal-mode">
-          <w class="search-input-group">
-            <w id="input-search" type="textedit" class="search-input"></w>
-            <w class="search-input-addon-group">
-              <w id="btn-clear-search" type="icon" class="icon-btn" name="close" />
-              <w id="btn-search-files" type="icon" class="icon-btn" name="magnify" />
-            </w>
-          </w>
-          <w id="view-search-actions" class="view-navbar-actions hide">
-            <w class="view-navbar-btn" data-toggle="dropdown" data-target="dropdown-search-files-sort">
-              <w type="icon" class="text" name="sort"></w>
-            </w>
-            <w id="btn-select-search-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="checkbox-multiple-marked-outline"></w>
-            </w>
-          </w>
-        </w>
-        <w class="view-navbar on-selection-mode">
-          <w id="view-search-selection-stats" type="textview-i18n" class="view-navbar-text"></w>
-          <w class="view-navbar-actions  on-selection-mode">
-            <w id="btn-tag-search-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="tag-multiple"></w>
-            </w>
-            <w id="btn-delete-search-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="delete"></w>
-            </w>
-            <w class="divider"></w>
-            <w id="btn-cancel-search-select" class="view-navbar-btn">
-              <w type="textview-i18n" class="text" data-i18n-key="button.cancel">取消</w>
-            </w>
-          </w>
-        </w>
-        <w id="dropdown-search-files-sort" type="dropdown-menu" class="checkable" data-position="bottom right"></w>
-        <w class="view-body">
-          <w id="view-search-tags-wrapper" class="view-content-wrapper">
-            <w class="view-content full-height">
-              <w id="tip-search-tags-empty" class="floating center middle aligned icon message hide">
-                <w type="textview" class="icon icon icon-tag-multiple"></w>
-                <w type="textview-i18n" class="text" data-i18n-key="search.message.empty_tags">未找到标签记录</w>
-              </w>
-              <w id="view-search-tags" type="thumbview" class="scrolllayer tag-thumb-list"></w>
-            </w>
-            <w type="scrollbar" target="view-search-tags"/>
-          </w>
-          <w id="view-search-results-wrapper" class="hide view-content-wrapper">
-            <w class="view-content full-height">
-              <w id="tip-search-no-result" class="floating center middle aligned icon message hide">
-                <w type="textview" class="icon icon icon-file-hidden"></w>
-                <w type="textview-i18n" class="text" data-i18n-key="search.message.empty_results">未找到符合条件的图片</w>
-              </w>
-              <w id="view-search-files" type="thumbview" class="scrolllayer file-list"></w>
-            </w>
-            <w type="scrollbar" target="view-search-files"/>
-          </w>
-        </w>
-      </w>
-      <w id="view-folders" class="view hide">
-        <w class="view-navbar">
-          <w type="textview-i18n" class="text on-normal-mode view-navbar-title" data-i18n-key="folders.title">文件夹</w>
-          <w id="view-folders-selection-stats" type="textview-i18n" class="view-navbar-text on-selection-mode"></w>
-          <w class="view-navbar-actions on-selection-mode">
-            <w id="btn-tag-folder-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="tag-multiple"></w>
-            </w>
-            <w id="btn-delete-folder-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="delete"></w>
-            </w>
-            <w class="divider"></w>
-            <w id="btn-cancel-folder-select" class="view-navbar-btn">
-              <w type="textview-i18n" class="text" data-i18n-key="button.cancel">取消</w>
-            </w>
-          </w>
-          <w class="view-navbar-actions on-normal-mode">
-            <w class="view-navbar-btn" data-toggle="dropdown" data-target="dropdown-folder-files-sort">
-              <w type="icon" class="text" name="sort"></w>
-            </w>
-            <w id="btn-select-folder-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="checkbox-multiple-marked-outline"></w>
-            </w>
-            <w id="btn-sync-folder-files" class="view-navbar-btn">
-              <w type="icon" class="text" name="sync"></w>
-            </w>
-          </w>
-        </w>
-        <w class="view-body">
-          <w id="view-folders-info-box" class="folder-info-box">
-            <w id="view-folders-info-box-name" type="textview" class="text folder-info-box-name"></w>
-            <w id="view-folders-info-box-path" type="textview" class="text folder-info-box-path"></w>
-            <w id="btn-return-root-folder" class="link">
-              <w type="textview-i18n" class="text" data-i18n-key="folders.return">返回到源文件夹</w>
-            </w>
-          </w>
-          <w id="view-folders-content-wrapper" class="view-content-wrapper">
-            <w id="view-folders-content" class="view-content full-height">
-              <w id="tip-empty-folder" class="floating center middle aligned icon message hide">
-                <w type="icon" name="folder-multiple-image"></w>
-                <w type="textview-i18n" class="text" data-i18n-key="folders.message.empty">未找到可读取的图片或文件夹</w>
-              </w>
-              <w type="thumbview" id="current-file-list" class="scrolllayer file-list"></w>
-            </w>
-            <w type="scrollbar" target="current-file-list"/>
-          </w>
-        </w>
-        <w id="dropdown-folder-files-sort" type="dropdown-menu" class="checkable" data-position="bottom right"></w>
-      </w>
-      <w id="view-settings" class="view hide">
-        <w class="view-navbar">
-          <w type="textview-i18n" class="text view-navbar-title" data-i18n-key="settings.title">设置</w>
-        </w>
-        <w class="view-body">
-          <w id="view-settings-content-wrapper" class="view-content-wrapper">
-            <w id="view-settings-content" class="scrolllayer view-content">
-              <w class="setting-group">
-                <w type="textview-i18n" class="text title" data-i18n-key="settings.thumb_cache.title">缓存</w>
-                <w class="item-group">
-                  <w class="text-line">
-                    <w id="text-thumb-db-size" type="textview-i18n" class="text" data-i18n-key="settings.thumb_cache.stats">当前缩略图缓存共占用 %s 的空间</w>
-                  </w>
-                  <w class="text text-line text-muted" type="textview-i18n" data-i18n-key="settings.thumb_cache.description">本应用会在你浏览图片列表的时候自动缓存缩略图，以便在下次浏览图片时能够快速呈现缩略图。</w>
-                  <w id="btn-clear-thumb-db" class="btn btn-default">
-                    <w type="textview-i18n" class="text" data-i18n-key="button.clear">清除</w>
-                  </w>
-                </w>
-              </w>
-              <w class="setting-group">
-                <w type="textview-i18n" class="title" data-i18n-key="settings.language">语言</w>
-                <w class="item-group">
-                  <w class="text-line">
-                    <w type="textview-i18n" class="text" data-i18n-key="settings.language_description">更改界面的显示语言</w>
-                  </w>
-                  <w id="btn-change-language" class="btn" data-toggle="dropdown" data-target="dropdown-languages">
-                    <w id="txt-current-language" type="textview" class="default text">简体中文</w>
-                    <w type="textview" class="icon icon icon-chevron-down"></w>
-                  </w>
-                  <w id="dropdown-languages" type="dropdown-menu"></w>
-                </w>
-              </w>
-              <w class="setting-group">
-                <w type="textview-i18n" class="title" data-i18n-key="settings.source_folders.title">源</w>
-                <w class="source-list">
-                  <w id="current-source-list"></w>
-                  <w id="btn-add-source" class="source-list-item">
-                    <w type="icon" class="text" name="plus"></w>
-                    <w type="textview-i18n" class="text" data-i18n-key="settings.source_folders.add_folder">添加文件夹</w>
-                  </w>
-                </w>
-              </w>
-              <w class="setting-group">
-                <w type="textview-i18n" class="text title" data-i18n-key="settings.private_space.title">私人空间</w>
-                <w class="text text-line" type="textview-i18n" data-i18n-key="settings.private_space.description">私人空间可用于存放一些非公开的资源，该空间内的资源不会在资源列表中显示，并且不会出现在搜索结果中。</w>
-                <w class="text-line">
-                  <w id="switch-private-space-open" type="switch"></w>
-                  <w type="textview-i18n" class="text switch-text" data-i18n-key="switch.off" data-bind="switch"></w>
-                </w>
-              </w>
-              <w id="view-private-space" class="setting-group hide">
-                <w class="text title2" type="textview-i18n" data-i18n-key="settings.private_space.sources_title">私密源</w>
-                <w class="source-list">
-                  <w id="current-private-source-list"></w>
-                  <w id="btn-add-private-source" class="source-list-item">
-                    <w type="icon" class="text" name="plus"></w>
-                    <w type="textview-i18n" class="text" data-i18n-key="settings.source_folders.add_folder">添加文件夹</w>
-                  </w>
-                </w>
-                <w class="text title2" type="textview-i18n" data-i18n-key="settings.private_space.password_title">密码</w>
-                <w id="btn-reset-password" class="btn btn-default">
-                  <w type="textview-i18n" class="text" data-i18n-key="button.reset_password">重置密码</w>
-                </w>
-              </w>
-              <w class="setting-group">
-                <w type="textview-i18n" class="text title" data-i18n-key="settings.about">关于此应用</w>
-                <w class="item-group">
-                  <w type="textview" class="text">LC's Finder 0.2.0 Beta</w>
-                  <w id="txt-trial-license" type="textview-i18n" class="text text-line" data-i18n-key="settings.trial_message">当前是试用版，仅供评估使用，如果你认为此应用对你有用，可以选择购买正式版，你的感谢和财务支持将激励我们继续开发此应用。</w>
-                  <w type="textview-i18n" class="text" data-i18n-key="settings.copyright">© 2017 LC's Software，保留所有权利。</w>
-                  <w class="btn-group">
-                    <w id="btn-open-license" class="link">
-                      <w type="textview-i18n" class="text" data-i18n-key="settings.license">许可协议</w>
-                    </w>
-                    <w id="btn-open-website" class="link">
-                      <w type="textview-i18n" class="text" data-i18n-key="settings.website">官方网站</w>
-                    </w>
-                    <w id="btn-open-feedback" class="link">
-                      <w type="textview-i18n" class="text" data-i18n-key="settings.feedback">问题反馈</w>
-                    </w>
-                    <w id="btn-open-sourcecode" class="link">
-                      <w type="textview-i18n" class="text" data-i18n-key="settings.sourcecode">源代码</w>
-                    </w>
-                  </w>
-                </w>
-              </w>
-            </w>
-            <w type="scrollbar" target="view-settings-content"/>
-          </w>
-        </w>
-      </w>
+      <resource type="text/xml" src="assets/views/sidebar.xml"/>
+      <resource type="text/xml" src="assets/views/search.xml"/>
+      <resource type="text/xml" src="assets/views/home.xml"/>
+      <resource type="text/xml" src="assets/views/folders.xml"/>
+      <resource type="text/xml" src="assets/views/settings.xml"/>
       <w class="app-alert">
         <w class="alert alert-primary hide">
           <w id="file-sync-tip-title" type="textview-i18n" class="alert-header text" data-i18n-key="filesync.title.syncing">正在同步你的资源</w>
