--- a/app/assets/views/settings.xml
+++ b/app/assets/views/settings.xml
@@ -89,18 +89,10 @@
                 <w id="txt-trial-license" type="textview-i18n" class="text text-line" data-i18n-key="settings.trial_message">当前是试用版，仅供评估使用，如果你认为此应用对你有用，可以选择购买正式版，你的感谢和财务支持将激励我们继续开发此应用。</w>
                 <w type="textview-i18n" class="text" data-i18n-key="settings.copyright">© 2017 LC's Software，保留所有权利。</w>
                 <w class="btn-group">
-                  <w id="btn-open-license" class="link">
-                    <w type="textview-i18n" class="text" data-i18n-key="settings.license">许可协议</w>
-                  </w>
-                  <w id="btn-open-website" class="link">
-                    <w type="textview-i18n" class="text" data-i18n-key="settings.website">官方网站</w>
-                  </w>
-                  <w id="btn-open-feedback" class="link">
-                    <w type="textview-i18n" class="text" data-i18n-key="settings.feedback">问题反馈</w>
-                  </w>
-                  <w id="btn-open-sourcecode" class="link">
-                    <w type="textview-i18n" class="text" data-i18n-key="settings.sourcecode">源代码</w>
-                  </w>
+                  <w type="link-i18n" class="link" target="http://www.gnu.org/licenses/gpl-2.0.html" data-i18n-key="settings.license">许可协议</w>
+                  <w type="link-i18n" class="link" target="https://lcfinder.lc-soft.io/" data-i18n-key="settings.website">官方网站</w>
+                  <w type="link-i18n" class="link" target="https://github.com/lc-soft/LC-Finder/issues" data-i18n-key="settings.feedback">问题反馈</w>
+                  <w type="link-i18n" class="link" target="https://github.com/lc-soft/LC-Finder" data-i18n-key="settings.sourcecode">源代码</w>
                 </w>
               </w>
             </w>
