feat: add labelbox widget

--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -98,3 +98,8 @@ $file-picture-size: 226px;
 
 $folder-info-box-name-size: 18px;
 $folder-info-box-height: $spacing * 2 + $line-height-base * 2 * $font-size + $folder-info-box-name-size * $line-height-base;
+
+$labelbox-label-height: 24px;
+$labelbox-border-width: 2px;
+
+$window-panel-width: 320px;
