--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "components/text";
 @import "components/link";
 @import "components/tags";
+@import "components/labelbox";
 @import "components/switch";
 @import "components/alert";
 @import "components/progress";
