--- a/app/assets/views/picture.xml
+++ b/app/assets/views/picture.xml
@@ -1,55 +1,58 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <lcui-app>
   <ui>
-    <widget id="picture-viewer-window" class="window theme-default">
-      <widget class="window-navbar">
-        <widget class="icon-btn window-navbar-btn" id="btn-hide-picture-viewer">
-          <widget type="textview" class="icon icon icon-arrow-left"></widget>
-        </widget>
-        <widget class="icon-btn window-navbar-btn" id="btn-browse-all">
-          <widget type="textview" class="text icon icon icon-image-multiple"></widget>
-          <widget type="textview-i18n" class="text" data-i18n-key="picture.browse_all">浏览全部图片</widget>
-        </widget>
-        <widget class="pull-right">
-          <widget class="icon-btn window-navbar-btn" id="btn-show-picture-info">
-            <widget type="textview" class="icon icon icon-information"></widget>
-          </widget>
-          <widget class="icon-btn window-navbar-btn" id="btn-delete-picture">
-            <widget type="textview" class="icon icon icon-delete"></widget>
-          </widget>
-        </widget>
-      </widget>
-      <widget class="window-body">
-        <widget id="picture-viewer-target" class="picture-container"></widget>
-        <widget class="zoom-btn-group">
-          <widget id="btn-picture-zoom-out" class="icon-btn picture-option-btn">
-            <widget type="icon" name="minus"></widget>
-          </widget>
-          <widget id="btn-picture-reset-size" class="icon-btn picture-option-btn">
-            <widget type="icon" name="fullscreen"></widget>
-          </widget>
-          <widget id="btn-picture-zoom-in" class="icon-btn picture-option-btn">
-            <widget type="icon" name="plus"></widget>
-          </widget>
-        </widget>
-        <widget id="btn-picture-prev" class="icon-btn picture-switch-btn prev">
-          <widget class="icon icon icon-chevron-left" type="textview"></widget>
-        </widget>
-        <widget id="btn-picture-next" class="icon-btn picture-switch-btn next">
-          <widget class="icon icon icon-chevron-right" type="textview"></widget>
-        </widget>
-        <widget id="tip-picture-loading" class="floating center middle aligned message box">
-          <widget type="textview-i18n" class="text" data-i18n-key="picture.message.loading">图片载入中...</widget>
-        </widget>
-        <widget id="tip-picture-not-found" class="floating center middle aligned icon inverted message">
-          <widget type="textview" class="icon icon icon-file-hidden"></widget>
-          <widget type="textview-i18n" class="text" data-i18n-key="picture.message.empty">此处没有任何要显示的内容。</widget>
-        </widget>
-        <widget id="tip-picture-unsupport" class="floating center middle aligned icon inverted message">
-          <widget type="textview" class="icon icon icon-help"></widget>
-          <widget type="textview-i18n" class="text" data-i18n-key="picture.message.unsupport">无法识别该图片的内容。</widget>
-        </widget>
-      </widget>
-    </widget>
+    <w id="picture-viewer-window" class="window theme-default">
+      <resource type="text/xml" src="assets/views/picture_info.xml"/>
+      <w class="window-main">
+        <w class="window-navbar">
+          <w class="icon-btn window-navbar-btn" id="btn-hide-picture-viewer">
+            <w type="textview" class="icon icon icon-arrow-left"></w>
+          </w>
+          <w class="icon-btn window-navbar-btn" id="btn-browse-all">
+            <w type="textview" class="text icon icon icon-image-multiple"></w>
+            <w type="textview-i18n" class="text" data-i18n-key="picture.browse_all">浏览全部图片</w>
+          </w>
+          <w class="pull-right">
+            <w class="icon-btn window-navbar-btn" id="btn-show-picture-info">
+              <w type="textview" class="icon icon icon-information"></w>
+            </w>
+            <w class="icon-btn window-navbar-btn" id="btn-delete-picture">
+              <w type="textview" class="icon icon icon-delete"></w>
+            </w>
+          </w>
+        </w>
+        <w class="window-body">
+          <w id="picture-viewer-target" class="picture-container"></w>
+          <w class="zoom-btn-group">
+            <w id="btn-picture-zoom-out" class="icon-btn picture-option-btn">
+              <w type="icon" name="minus"></w>
+            </w>
+            <w id="btn-picture-reset-size" class="icon-btn picture-option-btn">
+              <w type="icon" name="fullscreen"></w>
+            </w>
+            <w id="btn-picture-zoom-in" class="icon-btn picture-option-btn">
+              <w type="icon" name="plus"></w>
+            </w>
+          </w>
+          <w id="btn-picture-prev" class="icon-btn picture-switch-btn prev">
+            <w class="icon icon icon-chevron-left" type="textview"></w>
+          </w>
+          <w id="btn-picture-next" class="icon-btn picture-switch-btn next">
+            <w class="icon icon icon-chevron-right" type="textview"></w>
+          </w>
+          <w id="tip-picture-loading" class="floating center middle aligned message box">
+            <w type="textview-i18n" class="text" data-i18n-key="picture.message.loading">图片载入中...</w>
+          </w>
+          <w id="tip-picture-not-found" class="floating center middle aligned icon inverted message">
+            <w type="textview" class="icon icon icon-file-hidden"></w>
+            <w type="textview-i18n" class="text" data-i18n-key="picture.message.empty">此处没有任何要显示的内容。</w>
+          </w>
+          <w id="tip-picture-unsupport" class="floating center middle aligned icon inverted message">
+            <w type="textview" class="icon icon icon-help"></w>
+            <w type="textview-i18n" class="text" data-i18n-key="picture.message.unsupport">无法识别该图片的内容。</w>
+          </w>
+        </w>
+      </w>
+    </w>
   </ui>
 </lcui-app>
